--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <!-- Menu Items -->
         <div class="hidden space-x-6 md:flex">
           <a href="#" class="hover:text-darkGrayishBlue">Pricing</a>
-          <a href="#" class="hover:text-darkGrayishBlue">Product</a>
+          <a href="#" class="hover:text-darkGrayishBlue">Products</a>
           <a href="#" class="hover:text-darkGrayishBlue">About Us</a>
           <a href="#" class="hover:text-darkGrayishBlue">Careers</a>
           <a href="#" class="hover:text-darkGrayishBlue">Community</a>
